# benchmark-dolfinx

./: .cirun.yml  CMakeLists.txt  README.md  azure-pipelines.yml  main.cpp  spack.yaml
.azure_pipelines/: azure-pipelines.yml  cpu-pipeline.yml  gpu-amd-pipeline.yml  gpu-amd-pipelines.yml  gpu-cuda-pipeline.yml  gpu-pipeline.yml  test.cu
.github/workflows/: aws-ci.yml  ci.yml  cmake-single-platform.yml  cpu-build.yaml  lint.yml  rocm.yml  run_cpu.yml  runs-on-ci.yml  spack-ci.yml  spack.yml  test_runner.yml
examples/: Q3-300M.json  Q6-500M.json  example.md  mat_comp-16.json  slurm.out  submit.sh
spack/: repo.yaml
src/: CMakeLists.txt  Doxyfile  README.md  cg.hpp  csr.hpp  forms.cpp  forms.hpp  geometry_cpu.cpp  geometry_cpu.hpp  geometry_gpu.hpp  laplacian.hpp  laplacian_cpu.hpp  laplacian_gpu.hpp  laplacian_solver.cpp  laplacian_solver.hpp  main.cpp  mesh.cpp  mesh.hpp  poisson32.py  solver_gpu.hpp  test_output.py  util.cpp  util.hpp  vector.hpp
